[tool.poetry]
name = "compare-securities-firm"
version = "0.1.0"
description = ""
authors = ["Yoiduki <90896806+y-muen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
lxml = "^4.8.0"
html5lib = "^1.1"
pandas = "^1.4.2"
requests = "^2.27.1"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
